--- a/styles/style.css
+++ b/styles/style.css
@@ -371,5 +371,67 @@ table {
   font-weight: bold;
 }
   
+/* Main Section Four */
+.main-section-four {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 80px;
+}
 
+.main-section-four h1 {
+  /* margin-bottom: 24px; */
+}
+
+.main-section-four p {
+  opacity: .5;
+  line-height: 1.4;
+}
+
+.main-section-four-img img{
+  border-radius: 24px;
+}
+
+.main-section-four-1 {
+  display: flex;
+  gap: 20px;
+  background-color: #fff;
+  padding: 48px;
+  border-radius: 24px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 24px;
+}
+
+.main-section-four-1-inner {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.main-section-four-1-inner img {
+  width: 134px;
+}
+
+.main-section-four-2 {
+  display: flex;
+  gap: 20px;
+  background-color: #fff;
+  padding: 48px;
+  border-radius: 24px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 24px;
+}
+
+.main-section-four-3 {
+  display: flex;
+  gap: 20px;
+  background-color: #fff;
+  padding: 48px;
+  border-radius: 24px;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 24px;
+}
  
