--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,8 @@ nav {
     font-size: 32px;
   }
 
+  
+
 /* Shared Styles */
 .btn-primary {
     padding: 17px 34px;
@@ -502,4 +504,82 @@ table {
   text-align: center;
   opacity: .5;
   font-size: 20px;
+}
+
+/* Newsletter Section */
+
+.bg{
+  margin: 0 auto; /* Center the content horizontally */
+    width: 960px; /* Set the desired width of the content area */
+   
+}
+
+.newsletter {
+  display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+  width: 1280px;
+  height: 395px;
+  border-radius: 24px;
+  background-color: #C6E4D6;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
+  margin-bottom: 80px;
+  
+}
+
+/* .newsletter {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+} */
+
+.newsletter h1 {
+  font-size: 40px;
+}
+
+.newsletter p {
+  opacity: .8;
+}
+
+.input-email {
+  padding: 18px 34px;
+  padding-right:320px;
+  margin-right: 0;
+  /* background-color: #006A50; */
+  /* border-radius: 8px; */
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border: none;
+  height: 56px;
+}
+
+/* Footer Section */
+footer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  background-color: white;
+  padding: 50px;
+  width: 100%;
+}
+
+footer h1 {
+  text-align: center;
+  font-size: 32px;
+}
+
+footer hr {
+  width: 1122px;
+  opacity: .8;
+  /* text-align: center; */
+  align-self: center;
+}
+
+.footer-social-icons {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
 }
